--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <br>
                 <strong>Xing Yi Liu</strong>, Homayoon Beigi
                 <br>
-                <em>Recognition Technologies Technical Report 2023, in review for Interspeech 2023</em>
+                <em>Recognition Technologies 2023, in review for Interspeech 2023</em>
                 <br>
                 <a href="data/2023efficient.bib", target="_blank">BibTeX</a> | 
                 <a href="https://arxiv.org/abs/2302.13376", target="_blank">arXiv</a>
