--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Xing Yi (Peter) Liu</name>
               </p>
-              <p>I received my M.S. in Computer Science from Columbia University and my B.A.Sc. from the University of California, Los Angeles. I am currently looking for PhD opportunities in Beijing or Shanghai.
+              <p>I am currently a research intern at Tsinghua University's <a href="https://air.tsinghua.edu.cn/en/index.htm" target="_blank">Institute of AI Industry Research</a>. I received my M.S. in Computer Science from Columbia University.
               </p>
               <p>
               My research interest is in multimodal deep learning and efficient machine learning.
