--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <br>
                 <strong>Xing Yi Liu</strong>, Homayoon Beigi
                 <br>
-                <em>Recognition Technologies 2023, in review for Interspeech 2023</em>
+                <em>Recognition Technologies 2023</em>
                 <br>
                 <a href="data/2023efficient.bib", target="_blank">BibTeX</a> | 
                 <a href="https://arxiv.org/abs/2302.13376", target="_blank">arXiv</a>
@@ -116,11 +116,7 @@
           </tr>
 
         </tbody></table>
-
-
-
-
-
+        
 
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -132,25 +128,6 @@
         </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
-        <tr>
-            <td style="padding:20px;width:0%;vertical-align:middle">
-                <div class="one">
-                  <img src='images/unpub-2023peptide.jpg' width="160">
-                </div>
-              </td>
-              <td style="padding:20px;width:100%;vertical-align:middle">
-                <papertitle>Peptide Quantification</papertitle>
-                <br>
-                Supervisor: Prof. Ming Li, University of Waterloo
-                <br>
-                <p></p>
-                <p>
-                  Our aim is to determine relative abundances of specific peptides in biological samples using machine learning. We adopt PointIso for peptide feature detection from liquid chromatography mass spectrometry maps and aggregate varying peptide amounts detected in different replicates of the same dilution sample.
-                </p>
-            </td>
-        </tr>
-
 
         <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -166,25 +143,6 @@
                 <p></p>
                 <p>
                   We are extending our work on EfficientPunct, our previous punctuation model, by performing ablation studies and further shrinking model size. We experimented with linear discriminant analysis for dimensionality reduction of multimodal features and are studying the effect of jointly training multimodal fusion layers with the acoustic and/or text encoders.
-                </p>
-            </td>
-        </tr>
-
-
-        <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-                <div class="one">
-                  <img src='images/unpub-2023descriptive.png' width="160">
-                </div>
-              </td>
-              <td style="padding:20px;width:75%;vertical-align:middle">
-                <papertitle>Descriptive Semantic Image Translation with FlexIT</papertitle>
-                <br>
-                Supervisor: Prof. Iddo Drori, Columbia University
-                <br>
-                <p></p>
-                <p>
-                  We proposed a novel framework for translating objects in images using natural language descriptors. We extended FlexIT (from CVPR 2022) by introducing a MDETR component for multimodal object detection. We achieved an LPIPS similarity score of 10.4 on the COCO-Stuff dataset, superior to FlexIT’s 24.7.
                 </p>
             </td>
         </tr>
