--- a/index.html
+++ b/index.html
@@ -75,6 +75,29 @@
           <tr bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
+                  <img src='' width="160">
+                </div>
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="papers/2023molfm.pdf" target="_blank"><papertitle>MolFM: A Multimodal Molecular Foundation Model
+</papertitle></a>
+                <br>
+                Yizhen Luo, Kai Yang, Massimo Hong, <strong>Xing Yi Liu</strong>, Zaiqing Nie
+                <br>
+                <em>In preprint, 2023</em>
+                <br>
+                <a href="data/2023molfm.bib", target="_blank">BibTeX</a> | 
+                <a href="https://arxiv.org/abs/2307.09484", target="_blank">arXiv</a>
+                <p></p>
+                <p>
+                  We introduce MolFM, a multimodal molecular foundation model designed to facilitate joint representation learning from molecular structures, biomedical texts, and knowledge graphs. We propose cross-modal attention to facilitate comprehension between these modalities.
+                </p>
+            </td>
+          </tr>
+
+          <tr bgcolor="#ffffd0">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
                   <img src='images/2023efficient.png' width="160">
                 </div>
               </td>
@@ -89,7 +112,7 @@
                 <a href="https://arxiv.org/abs/2302.13376", target="_blank">arXiv</a>
                 <p></p>
                 <p>
-                  EfficientPunct outperforms the previous best punctuation restoration model by 1.0 F1 points, using less than a tenth of its parameters to process embeddings.
+                  EfficientPunct outperforms the previous best punctuation restoration model by 1.0 F1 points, using less than a tenth of its parameters to process embeddings. We create an ensemble streamlined from a speech recognizer to extract audio embeddings.
                 </p>
             </td>
           </tr>
@@ -110,7 +133,7 @@
               <a href="data/2016uwnlp.bib", target="_blank">BibTeX</a>
               <p></p>
               <p>
-                Our submission to the NTCIR-12 task treats short text conversation as a community question-answering problem.
+                Our submission to the NTCIR-12 task treats short text conversation as a community question-answering problem. We achieved performances of mean nDCG@1 0.2767, mean P+ 0.4284 and mean nERR@10 0.4095.
               </p>
             </td>
           </tr>
