--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
               <p style="text-align:center">
                 <name>Xing Yi (Peter) Liu</name>
               </p>
-              <p>I am currently a research intern at Tsinghua University's <a href="https://air.tsinghua.edu.cn/en/index.htm" target="_blank">Institute of AI Industry Research</a>. I received my M.S. in Computer Science from Columbia University.
+              <p>I received my M.S. in Computer Science from Columbia University and conducted research at Tsinghua University's Institute for AI Industry Research in 2023.
               </p>
               <p>
-              My research interest is in multimodal deep learning and efficient machine learning.
+                My research interest is in multimodal learning, efficient machine learning, and applications of deep learning.
               </p>
               <p style="text-align:center">
                 <a href="mailto:liu.peter@columbia.edu">liu.peter@columbia.edu</a> &nbsp|&nbsp
