--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <a href="data/2023kedd.bib", target="_blank">BibTeX</a>
                 <p></p>
                 <p>
-                  
+                   Human pharmaceutical experts draw insight from both structured knowledge in knowledge bases and unstructured knowledge in biomedical literature. Our proposal, KEDD, extracts knowledge similarly and solves a variety of drug discovery tasks in a unified framework.
                 </p>
             </td>
           </tr>
