--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
                 <br>
                 Yizhen Luo*, <strong>Xing Yi Liu</strong>*, Kai Yang, Kui Huang, Massimo Hong, Jiahuan Zhang, Yushuai Wu, Zaiqing Nie
                 <br>
-                <em>In review 2023</em>
+                <em>arXiv 2023</em>
                 <br>
-                <a href="data/2023kedd.bib", target="_blank">BibTeX</a>
+                <a href="data/2023kedd.bib", target="_blank">BibTeX</a> | 
+                <a href="https://arxiv.org/abs/2305.01523", target="_blank">arXiv</a>
                 <p></p>
                 <p>
                    Human pharmaceutical experts draw insight from both structured knowledge in knowledge bases and unstructured knowledge in biomedical literature. Our proposal, KEDD, extracts knowledge similarly and solves a variety of drug discovery tasks in a unified framework.
