--- a/index.html
+++ b/index.html
@@ -77,13 +77,35 @@
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
+                  <img src='images/2023efficient.png' width="160">
+                </div>
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="papers/2023efficient.pdf" target="_blank"><papertitle>Efficient Ensemble for Multimodal Punctuation Restoration Using Time-Delay Neural Network</papertitle></a>
+                <br>
+                <strong>Xing Yi Liu</strong>, Homayoon Beigi
+                <br>
+                <em>IMCOM 2024</em>
+                <br>
+                <a href="data/2023efficient.bib", target="_blank">BibTeX</a> | 
+                <a href="https://arxiv.org/abs/2302.13376", target="_blank">arXiv</a>
+                <p></p>
+                <p>
+                  EfficientPunct outperforms the previous best punctuation restoration model by 1.0 F1 points, using less than a tenth of its parameters to process embeddings. We create an ensemble streamlined from a speech recognizer to extract audio embeddings.
+                </p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
                   <img src='images/2023kedd.png' width="160">
                 </div>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
                 <a href="papers/2023kedd.pdf" target="_blank"><papertitle>Towards Unified AI Drug Discovery with Multiple Knowledge Modalities</papertitle></a>
                 <br>
-                Yizhen Luo*, <strong>Xing Yi Liu</strong>*, Kai Yang, Kui Huang, Massimo Hong, Jiahuan Zhang, Yushuai Wu, Zaiqing Nie
+                Yizhen Luo, <strong>Xing Yi Liu</strong>, Kai Yang, Kui Huang, Massimo Hong, Jiahuan Zhang, Yushuai Wu, Zaiqing Nie
                 <br>
                 <em>arXiv 2023</em>
                 <br>
@@ -114,28 +136,6 @@
                 <p></p>
                 <p>
                   We introduce MolFM, a multimodal molecular foundation model designed to facilitate joint representation learning from molecular structures, biomedical texts, and knowledge graphs. We propose cross-modal attention to facilitate comprehension between these modalities.
-                </p>
-            </td>
-          </tr>
-
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-                <div class="one">
-                  <img src='images/2023efficient.png' width="160">
-                </div>
-              </td>
-              <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="papers/2023efficient.pdf" target="_blank"><papertitle>Efficient Ensemble Architecture for Multimodal Acoustic and Textual Embeddings in Punctuation Restoration using Time-Delay Neural Networks</papertitle></a>
-                <br>
-                <strong>Xing Yi Liu</strong>, Homayoon Beigi
-                <br>
-                <em>Recognition Technologies 2023</em>
-                <br>
-                <a href="data/2023efficient.bib", target="_blank">BibTeX</a> | 
-                <a href="https://arxiv.org/abs/2302.13376", target="_blank">arXiv</a>
-                <p></p>
-                <p>
-                  EfficientPunct outperforms the previous best punctuation restoration model by 1.0 F1 points, using less than a tenth of its parameters to process embeddings. We create an ensemble streamlined from a speech recognizer to extract audio embeddings.
                 </p>
             </td>
           </tr>
