--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:liu.peter@columbia.edu">liu.peter@columbia.edu</a> &nbsp|&nbsp
-                <a href="data/cv.pdf" target="_blank">CV</a> &nbsp|&nbsp
+                <a href="cv.pdf" target="_blank">CV</a> &nbsp|&nbsp
                 <a href="https://scholar.google.com/citations?user=J10jvjMAAAAJ&hl=en" target="_blank">Google Scholar</a>
               </p>
             </td>
@@ -77,18 +77,18 @@
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
-                  <img src='images/2023efficient.png' width="160">
+                  <img src='images/2024efficient.png' width="160">
                 </div>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="papers/2023efficient.pdf" target="_blank"><papertitle>Efficient Ensemble for Multimodal Punctuation Restoration Using Time-Delay Neural Network</papertitle></a>
+                <a href="papers/2024efficient.pdf" target="_blank"><papertitle>Efficient Ensemble for Multimodal Punctuation Restoration Using Time-Delay Neural Network</papertitle></a>
                 <br>
                 <strong>Xing Yi Liu</strong>, Homayoon Beigi
                 <br>
                 <em>IMCOM 2024</em>
                 <br>
-                <a href="data/2023efficient.bib", target="_blank">BibTeX</a> | 
-                <a href="https://arxiv.org/abs/2302.13376", target="_blank">arXiv</a>
+                <a href="https://arxiv.org/abs/2302.13376", target="_blank">arXiv</a> |
+                <a href="https://github.com/lxy-peter/EfficientPunct", target="_blank">Code</a>
                 <p></p>
                 <p>
                   EfficientPunct outperforms the previous best punctuation restoration model by 1.0 F1 points, using less than a tenth of its parameters to process embeddings. We create an ensemble streamlined from a speech recognizer to extract audio embeddings.
@@ -109,8 +109,8 @@
                 <br>
                 <em>arXiv 2023</em>
                 <br>
-                <a href="data/2023kedd.bib", target="_blank">BibTeX</a> | 
-                <a href="https://arxiv.org/abs/2305.01523", target="_blank">arXiv</a>
+                <a href="https://arxiv.org/abs/2305.01523", target="_blank">arXiv</a> |
+                <a href="https://github.com/PharMolix/OpenBioMed", target="_blank">Code</a>
                 <p></p>
                 <p>
                    Human pharmaceutical experts draw insight from both structured knowledge in knowledge bases and unstructured knowledge in biomedical literature. Our proposal, KEDD, extracts knowledge similarly and solves a variety of drug discovery tasks in a unified framework.
@@ -131,8 +131,8 @@
                 <br>
                 <em>arXiv 2023</em>
                 <br>
-                <a href="data/2023molfm.bib", target="_blank">BibTeX</a> | 
-                <a href="https://arxiv.org/abs/2307.09484", target="_blank">arXiv</a>
+                <a href="https://arxiv.org/abs/2307.09484", target="_blank">arXiv</a> |
+                <a href="https://github.com/PharMolix/OpenBioMed", target="_blank">Code</a>
                 <p></p>
                 <p>
                   We introduce MolFM, a multimodal molecular foundation model designed to facilitate joint representation learning from molecular structures, biomedical texts, and knowledge graphs. We propose cross-modal attention to facilitate comprehension between these modalities.
@@ -153,7 +153,6 @@
               <br>
               <em>NTCIR-12 2016</em>
               <br>
-              <a href="data/2016uwnlp.bib", target="_blank">BibTeX</a>
               <p></p>
               <p>
                 Our submission to the NTCIR-12 task treats short text conversation as a community question-answering problem. We achieved performances of mean nDCG@1 0.2767, mean P+ 0.4284 and mean nERR@10 0.4095.
@@ -164,7 +163,7 @@
         </tbody></table>
         
 
-
+<!--
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
@@ -194,7 +193,7 @@
         </tr>
 
       </tbody></table>
-
+-->
         
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
