--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                 <br>
                 <a href="https://arxiv.org/abs/2302.13376", target="_blank">arXiv</a> |
                 <a href="https://github.com/lxy-peter/EfficientPunct", target="_blank">Code</a> |
-                <a href="https://youtu.be/71MYwrEIjk0", target="_blank">Presentation</a> |
-                <a href="https://drive.google.com/file/d/1bFODvM4R6Y-jR-CUkkosNIMCM5nC2Qzr/view?usp=sharing", target="_blank">Slides</a>
+                <a href="https://drive.google.com/file/d/1bFODvM4R6Y-jR-CUkkosNIMCM5nC2Qzr/view?usp=sharing", target="_blank">Slides</a> |
+                <a href="https://youtu.be/71MYwrEIjk0", target="_blank">Talk</a>
                 <p></p>
                 <p>
                   EfficientPunct outperforms the previous best punctuation restoration model by 1.0 F1 points, using less than a tenth of its parameters to process embeddings. We create an ensemble streamlined from a speech recognizer to extract audio embeddings.
