--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                 </div>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="papers/2023kedd.pdf" target="_blank"><papertitle>Towards Unified AI Drug Discovery with Multiple Knowledge Modalities</papertitle></a>
+                <a href="https://spj.science.org/doi/epdf/10.34133/hds.0113" target="_blank"><papertitle>Towards Unified AI Drug Discovery with Multiple Knowledge Modalities</papertitle></a>
                 <br>
                 Yizhen Luo, <strong>Xing Yi Liu</strong>, Kai Yang, Kui Huang, Massimo Hong, Jiahuan Zhang, Yushuai Wu, Zaiqing Nie
                 <br>
-                <em>arXiv 2023</em>
+                <em>Health Data Science 2024</em>
                 <br>
                 <a href="https://arxiv.org/abs/2305.01523", target="_blank">arXiv</a> |
                 <a href="https://github.com/PharMolix/OpenBioMed", target="_blank">Code</a>
@@ -149,7 +149,7 @@
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="papers/2016uwnlp.pdf" target="_blank"><papertitle>UWNLP at the NTCIR-12 Short Text Conversation Task</papertitle></a>
+              <a href="https://research.nii.ac.jp/ntcir/workshop/OnlineProceedings12/pdf/ntcir/STC/02-NTCIR12-STC-CuiA.pdf" target="_blank"><papertitle>UWNLP at the NTCIR-12 Short Text Conversation Task</papertitle></a>
               <br>
               Anqi Cui, Guangyu Feng, Borui Ye, Kun Xiong, <strong>Xing Yi Liu</strong>, Ming Li
               <br>
