--- a/index.html
+++ b/index.html
@@ -81,39 +81,17 @@
                 </div>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="https://spj.science.org/doi/epdf/10.34133/hds.0113" target="_blank"><papertitle>Towards Unified AI Drug Discovery with Multiple Knowledge Modalities</papertitle></a>
+                <a href="https://spj.science.org/doi/epdf/10.34133/hds.0113" target="_blank"><papertitle>Towards Unified AI Drug Discovery with Multimodal Knowledge</papertitle></a>
                 <br>
                 Yizhen Luo, <strong>Xing Yi Liu</strong>, Kai Yang, Kui Huang, Massimo Hong, Jiahuan Zhang, Yushuai Wu, Zaiqing Nie
                 <br>
                 <em>Health Data Science 2024</em>
                 <br>
                 <a href="https://arxiv.org/abs/2305.01523", target="_blank">arXiv</a> |
-                <a href="https://github.com/PharMolix/OpenBioMed", target="_blank">Code</a>
+                <a href="https://github.com/icycookies/KEDD_temporal", target="_blank">Code</a>
                 <p></p>
                 <p>
                    Human pharmaceutical experts draw insight from both structured knowledge in knowledge bases and unstructured knowledge in biomedical literature. Our proposal, KEDD, extracts knowledge similarly and solves a variety of drug discovery tasks in a unified framework.
-                </p>
-            </td>
-          </tr>
-
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-                <div class="one">
-                  <img src='images/2023molfm.png' width="160">
-                </div>
-              </td>
-              <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="papers/2023molfm.pdf" target="_blank"><papertitle>MolFM: A Multimodal Molecular Foundation Model</papertitle></a>
-                <br>
-                Yizhen Luo, Kai Yang, Massimo Hong, <strong>Xing Yi Liu</strong>, Zaiqing Nie
-                <br>
-                <em>arXiv 2023</em>
-                <br>
-                <a href="https://arxiv.org/abs/2307.09484", target="_blank">arXiv</a> |
-                <a href="https://github.com/PharMolix/OpenBioMed", target="_blank">Code</a>
-                <p></p>
-                <p>
-                  We introduce MolFM, a multimodal molecular foundation model designed to facilitate joint representation learning from molecular structures, biomedical texts, and knowledge graphs. We propose cross-modal attention to facilitate comprehension between these modalities.
                 </p>
             </td>
           </tr>
@@ -138,6 +116,28 @@
                 <p></p>
                 <p>
                   EfficientPunct outperforms the previous best punctuation restoration model by 1.0 F1 points, using less than a tenth of its parameters to process embeddings. We create an ensemble streamlined from a speech recognizer to extract audio embeddings.
+                </p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+                  <img src='images/2023molfm.png' width="160">
+                </div>
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="papers/2023molfm.pdf" target="_blank"><papertitle>MolFM: A Multimodal Molecular Foundation Model</papertitle></a>
+                <br>
+                Yizhen Luo, Kai Yang, Massimo Hong, <strong>Xing Yi Liu</strong>, Zaiqing Nie
+                <br>
+                <em>arXiv 2023</em>
+                <br>
+                <a href="https://arxiv.org/abs/2307.09484", target="_blank">arXiv</a> |
+                <a href="https://github.com/PharMolix/OpenBioMed", target="_blank">Code</a>
+                <p></p>
+                <p>
+                  We introduce MolFM, a multimodal molecular foundation model designed to facilitate joint representation learning from molecular structures, biomedical texts, and knowledge graphs. We propose cross-modal attention to facilitate comprehension between these modalities.
                 </p>
             </td>
           </tr>
