--- a/index.html
+++ b/index.html
@@ -20,19 +20,13 @@
               <p style="text-align:center">
                 <name>Xing Yi (Peter) Liu</name>
               </p>
-              <p>I received my M.S. in Computer Science from Columbia University and conducted research at Tsinghua University's Institute for AI Industry Research in 2023.
-              </p>
-              <p>
-                My research interest is in multimodal learning, efficient machine learning, and applications of deep learning.
+              <p>I received my M.S. in Computer Science from Columbia University. My research interest is in multimodal learning, efficient machine learning, and applications of deep learning.
               </p>
               <p style="text-align:center">
                 <a href="mailto:liu.peter@columbia.edu">liu.peter@columbia.edu</a> &nbsp|&nbsp
                 <a href="cv.pdf" target="_blank">CV</a> &nbsp|&nbsp
                 <a href="https://scholar.google.com/citations?user=J10jvjMAAAAJ&hl=en" target="_blank">Google Scholar</a>
               </p>
-            </td>
-            <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/XingYiLiu.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/XingYiLiu.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -111,8 +105,7 @@
                 <br>
                 <a href="https://arxiv.org/abs/2302.13376", target="_blank">arXiv</a> |
                 <a href="https://github.com/lxy-peter/EfficientPunct", target="_blank">Code</a> |
-                <a href="https://drive.google.com/file/d/1bFODvM4R6Y-jR-CUkkosNIMCM5nC2Qzr/view?usp=sharing", target="_blank">Slides</a> |
-                <a href="https://youtu.be/LTLMfLfapPs", target="_blank">Talk</a>
+                <a href="https://drive.google.com/file/d/1bFODvM4R6Y-jR-CUkkosNIMCM5nC2Qzr/view?usp=sharing", target="_blank">Slides</a>
                 <p></p>
                 <p>
                   EfficientPunct outperforms the previous best punctuation restoration model by 1.0 F1 points, using less than a tenth of its parameters to process embeddings. We create an ensemble streamlined from a speech recognizer to extract audio embeddings.
