--- a/index.html
+++ b/index.html
@@ -116,21 +116,21 @@
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
-                  <img src='images/2023molfm.png' width="160">
+                  <img src='images/2024mv-mol.png' width="160">
                 </div>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="papers/2023molfm.pdf" target="_blank"><papertitle>MolFM: A Multimodal Molecular Foundation Model</papertitle></a>
+                <a href="papers/2024mv-mol.pdf" target="_blank"><papertitle>Learning Multi-View Molecular Representations with Structured and Unstructured Knowledge</papertitle></a>
                 <br>
-                Yizhen Luo, Kai Yang, Massimo Hong, <strong>Xing Yi Liu</strong>, Zaiqing Nie
+                Yizhen Luo, Kai Yang, Massimo Hong, <strong>Xing Yi Liu</strong>, Zikun Nie, Hao Zhou, Zaiqing Nie
                 <br>
-                <em>arXiv 2023</em>
+                <em>KDD 2024</em>
                 <br>
-                <a href="https://arxiv.org/abs/2307.09484", target="_blank">arXiv</a> |
+                <a href="https://arxiv.org/abs/2406.09841", target="_blank">arXiv</a> |
                 <a href="https://github.com/PharMolix/OpenBioMed", target="_blank">Code</a>
                 <p></p>
                 <p>
-                  We introduce MolFM, a multimodal molecular foundation model designed to facilitate joint representation learning from molecular structures, biomedical texts, and knowledge graphs. We propose cross-modal attention to facilitate comprehension between these modalities.
+                  We introduce MV-Mol, a molecular representation learning model designed to derive joint expertise from molecular structures, biomedical texts, and knowledge graphs. We propose cross-modal attention to facilitate comprehension between these modalities.
                 </p>
             </td>
           </tr>
