--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="https://spj.science.org/doi/epdf/10.34133/hds.0113" target="_blank"><papertitle>Towards Unified AI Drug Discovery with Multimodal Knowledge</papertitle></a>
+                <a href="https://spj.science.org/doi/epdf/10.34133/hds.0113" target="_blank"><papertitle>Toward Unified AI Drug Discovery with Multimodal Knowledge</papertitle></a>
                 <br>
                 Yizhen Luo, <strong>Xing Yi Liu</strong>, Kai Yang, Kui Huang, Massimo Hong, Jiahuan Zhang, Yushuai Wu, Zaiqing Nie
                 <br>
